"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-polyCub
 url = https://cran.r-project.org/src/contrib/polyCub_0.6.1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/WastlM/polyCub.git
 
 [autospec]
 # build 32 bit libraries
